# academic_tracker

./: .gitignore  CHANGELOG.rst  CITATION.cff  LICENSE  MANIFEST.in  README.rst  api.html  changelog.html  genindex.html  guide.html  index.html  jsonschema.html  license.html  objects.inv  py-modindex.html  pyproject.toml  reporting.html  requirements.txt  search.html  searchindex.js  setup.py  stalking.py  test.py  todo.html  tokenization.html  tutorial.html
_modules/: index.html
_sources/: api.rst.txt  guide.rst.txt  index.rst.txt  jsonschema.rst.txt  reporting.rst.txt  todo.rst.txt  tokenization.rst.txt  tutorial.rst.txt
_static/: documentation_options.js
academic_tracker/: __init__.py  __main__.py  academic_tracker.py  athr_srch_emails_and_reports.py  athr_srch_modularized.py  athr_srch_webio.py  citation_parsing.py  emails_and_reports.py  fileio.py  helper_functions.py  ref_srch_emails_and_reports.py  ref_srch_modularized.py  ref_srch_webio.py  tracker_schema.py  user_input_checking.py  webio.py
data/: authors.json
docs/: api.rst  buildDocs.sh  changelog.rst  conf.py  guide.rst  index.rst  jsonschema.rst  license.rst  reporting.rst  requirements.txt  todo.rst  tutorial.rst
example_configs/: many_projects_and_authors_project_and_summary_reports_no_duplicates__full_example.json  many_projects_and_authors_with_summary_reports__full_example.json  many_projects_and_authors_with_summary_reports__template.json  many_projects_and_authors_with_summary_reports_no_duplicates__template.json
stalker/: __init__.py  create_author_list.py  create_publication_list.py  fileio.py  schema.py  stalker.py  webio.py
(+223 files in other folders)
